circles overflow fixed

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
     body {
         margin: 0;
         padding: 0;
-        font-family: sans-serif;
         min-height: 100vh;
         font-family: "Montserrat", -apple-system, "system-ui", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
         overflow-x: hidden;
@@ -25,12 +24,12 @@
 
     .blue-circle {
         position: absolute;
-        top: -8vw;
-        right: -6vw;
+        top: 0;
+        right: 0;
         width: 20vw;
         height: 20vw;
         border-radius: 50%;
-        filter: blur(200px);
+        filter: blur(350px);
         background: var(--rcn-primary);
         overflow: hidden;
         z-index: -1;
@@ -64,8 +63,8 @@
 
     .gold-circle-tr-check {
         position: absolute;
-        top: -50px;
-        right: 350px;
+        top: 60%;
+        right: 35%;
         width: 20vw;
         height: 20vw;
         border-radius: 50%;
@@ -96,7 +95,7 @@
         width: 20vw;
         height: 20vw;
         border-radius: 50%;
-        filter: blur(250px);
+        filter: blur(300px);
         background: var(--rcn-primary);
         overflow: hidden;
         z-index: -1;
@@ -104,8 +103,8 @@
 
     .blue-circle-br-check {
         position: absolute;
-        top: -10vw;
-        right: -59vw;
+        bottom: 20%;
+        left: 0%;
         width: 20vw;
         height: 20vw;
         border-radius: 50%;
@@ -118,8 +117,8 @@
 
     .blue-circle-bl-check {
         position: absolute;
-        top: 15vw;
-        left: -30vw;
+        top: 54%;
+        right: 0%;
         width: 20vw;
         height: 20vw;
         border-radius: 50%;
@@ -361,12 +360,17 @@
         transform: rotate(8deg);
     }
 
+    .hero-left {
+        padding-left: 10px;
+    }
+
     .hero-right {
         position: relative;
     }
 
     .hero-img {
         max-width: 900px;
+        width: 45vw;
         height: auto;
         border-bottom-right-radius: 20%;
         border-top-left-radius: 20%;
@@ -383,8 +387,10 @@
         position: absolute;
         bottom: -50px;
         left: -50px;
-        width: 800px;
-        height: 720px;
+        width: 45vw;
+        height: 37vw;
+        max-height: 750px;
+        max-width: 800px;
         border: solid gold 5px;
         z-index: -1;
     }
@@ -451,6 +457,7 @@
         justify-content: center;
         max-width: 1300px;
         margin-inline: auto;
+        overflow: hidden;
     }
 
     .download {
@@ -691,7 +698,7 @@
         }
 
         .hero-section .hero-left h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
         }
 
         .hero-section {
